--- a/app/globals.css
+++ b/app/globals.css
@@ -148,3 +148,17 @@
   }
 }
 
+::-webkit-scrollbar {
+	width: 0.4rem;
+	height: 0.3rem;
+  }
+  
+  ::-webkit-scrollbar-track {
+	border-radius: 12px;
+	background: #c1b8c5d4;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+	border-radius: 12px;
+	background: #00D4BE
+  }
